--- a/files/app/stylesheets/partials/_typography.scss
+++ b/files/app/stylesheets/partials/_typography.scss
@@ -5,7 +5,7 @@
 }
 h1 {
 	font-size: 60px;
-	margin-bottom: 0.50em;  
+	margin-bottom: 0.50em;
 }
 h2 {
 	font-size: 35px;
@@ -47,7 +47,7 @@ a {
 }
 blockquote {
 	margin: 1.5em;
-	color: $alt_text_color;
+	color: $alt-text-color;
 	font-style: italic;
 }
 strong {
