Added jquery generator. Tweaked stylesheets.

--- a/files/app/stylesheets/partials/_fonts.scss
+++ b/files/app/stylesheets/partials/_fonts.scss
@@ -34,7 +34,7 @@ Change this mixins to your preference
 	font-family: '3DumbRegular', sans-serif;
 }
 @mixin ff-decorative{
-	font-family: cursive;
+	font-family: '2DumbRegular', cursive;
 }
 @mixin ff-mono{
 	font-family: monospace;
