--- a/files/app/stylesheets/partials/_elements.scss
+++ b/files/app/stylesheets/partials/_elements.scss
@@ -9,20 +9,14 @@ h1{
 	margin-bottom:1.5em;
 	
 }
-// #main {
-// 	padding: 12px 12px;  
-// 	//@include border-radius;   
-// 	background-color:rgb(250,250,250);   
-// 	
-// } 
+
 aside{                
-	font-family:'Lexia';
+	@include ff-decorative;
 	background-color:rgb(255,255,180);
-	@include box-shadow;  
-	*{
-		padding:0px 24px;
-	}                       
-	
+	@include page-curl(rgba(0,0,100,0.3), 8deg, 3deg, 2px, 8px, 8px);
+	p {
+		padding: 12px;
+	}	                                       
 }     
             
 #footer {
